# starsmashertools

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  __init__.py  install  install_offline  pre-push  pyproject.toml  setup.py  showdocs  uninstall  update
data/: README  default_preferences.py  new_preferences.py  preferences.py.orig
dev/: check_leaks  find_all_dependencies  increment_version  link_githooks
docs/: .buildinfo  CNAME  Makefile  api.rst  cliprograms.html  cliprograms.rst  conf.py  genindex.html  gettingstarted.html  gettingstarted.rst  index.html  index.rst  installation.rst  objects.inv  py-modindex.html  requirements.in  requirements.txt  search.html  searchindex.js  starsmashertools.helpers.html  starsmashertools.lib.html  starsmashertools.math.html  starsmashertools.mpl.html  usage.rst
extra/: README  iteration_timing
format_sheets/: cli.format  default.format~  ncooling2.format  ncooling2.format~
html/: .buildinfo  cliprograms.html  genindex.html  objects.inv  py-modindex.html
sphinx/: Makefile  conf.py  create_indexrst.py  find_docstring_issues.py  fix_html.py  gettingstarted.rst  index.rst  requirements.txt  starsmashertools.helpers.rst  starsmashertools.lib.rst  starsmashertools.math.rst  starsmashertools.mpl.rst
starsmashertools/: .#__init__.py  __init__.py  math.py  preferences.py
tests/: .sstools_session.json  basetest.py  compress  deleteme  extract  restore  run_all_tests.py  test  test_api.py  test_archive.py  test_archive2.py  test_argumentenforcer.py  test_axes.py  test_columndensity.py  test_columndensity.py.lprof  (+32 more)
(+294 files in other folders)
