[build-system]
requires = [
"setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "starsmashertools"
version = '8.24.0'
authors = [
  { name="Roger Hatfull" },
]
description = "Tools for StarSmasher simulations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

