[build-system]
requires = [
'setuptools>=68.2.2',
'numpy>=1.21.5',
]
build-backend = "setuptools.build_meta"

[project]
name = "starsmashertools"
version = '8.43.0'
authors = [
  { name="Roger Hatfull" },
]
description = "Tools for StarSmasher simulations"
readme = "README.md"
requires-python = ">=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

